# Winch-recognition

./: 1.cpp  zoomlion.vcxproj  zoomlion.vcxproj.filters
Debug/: vc141.idb
Debug/zoomlion.tlog/: zoomlion.lastbuildstate
winding_config_ini1/: 1.cpp  CMakeLists.txt  README.md  ReadConfig.cpp  RrConfig.cpp  RrConfig.h  aa.ini  algorithm.cpp  algorithm.h  predect.cpp  test.cpp
x64/Debug/: vc141.idb
x64/Debug/zoomlion.tlog/: CL.command.1.tlog  CL.read.1.tlog  link.command.1.tlog  zoomlion.lastbuildstate
x64/Release/zoomlion.tlog/: zoomlion.lastbuildstate
zoomlion/: algorithm.cpp  algorithm.h  predect.cpp  test.cpp
zoomlion/Release/zoomlion.tlog/: zoomlion.lastbuildstate
zoomlion/x64/Debug/zoomlion.tlog/: CL.write.1.tlog  link.read.1.tlog  link.write.1.tlog
zoomlion/x64/Release/zoomlion.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
